<resources>
    <string name="app_name">Job Links</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register_account">Resgister</string>
    <string name="title_activity_search_job">Fiter</string>
    <!-- Strings related to loginAsync -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_job_short_description">Short Description</string>
    <string name="prompt_job_description">Description</string>
    <string name="prompt_job_city">City</string>
    <string name="prompt_keyword">Key word</string>
    <string name="prompt_search">Search</string>
    <string name="prompt_cities">City</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_salary">Salary</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="please_sign_in_to_publish">Please sign in to publish a job.</string>
    <string name="please_sign_in_to_apply">Please sign in to apply job.</string>
    <string name="action_register">Register</string>
    <string name="link_to_register">No account yet? Create one.</string>
    <string name="home_page">Back to home.</string>
    <string name="action_logout">Logout</string>
    <string name="about">About</string>
    <string name="no_applied_jobs">No applied jobs</string>
    <string name="applied_jobs">Applied jobs</string>
    <string name="no_saved_jobs">No saved jobs</string>
    <string name="saved_jobs">Saved jobs</string>
    <string name="action_forgot_password">Forgot password ?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="message_login">Great to see you again</string>
    <string name="message_login2">and have a good day.</string>
    <string name="message_register">Create Account</string>
    <string name="message_register2">and get good jobs.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_sample_left_menu">SampleLeftMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cannot_connect_internet">Cannot connect to Internet. Please check your Internet connection.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="email_required">Email cannot be empty.</string>
    <string name="first_name_required">First name cannot be empty.</string>
    <string name="last_name_required">Last name cannot be empty.</string>
    <string name="password_required">Password cannot be empty.</string>
    <string name="invalid_name">Name is invalid.</string>
    <string name="invalid_length_name">The length of name is too short.</string>
    <string name="email">Email: </string>
    <string name="invalid_email">Email is invalid.</string>
    <string name="facebook_app_id">1005158932854569</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="title_activity_main">Job Links</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_home">Home</string>
    <string name="tab_message">Message</string>
    <string name="message_welcome">Welcome to JobLinks!</string>
    <string name="add_job_successfully">Add job successfully.</string>
    <string name="title_activity_publish_job">Publish Job</string>
    <string name="submit">Submit</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="save_job">This job is now saved</string>
    <string name="unsave_job">This job is no longer saved</string>
    <string name="already_save_job">This job is already saved</string>
    <string name="no_internet">No Internet found!</string>
    <string name="no_internet2">Please check your connection and try again.</string>
    <string name="no_internet3">No Internet found!</string>
    <string name="something_wrong">This is something wrong!</string>
    <string name="apply_job_successfully">You applied this job successfully</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_saved_job">Saved Jobs</string>
    <string name="drawer_item_applied_job">Applied Jobs</string>
    <string name="drawer_item_login">Sign In</string>
    <string name="drawer_item_register">Register</string>
    <string name="drawer_item_logout">Sign Out</string>
    <string name="title_activity_job_details">Job Details</string>
    <string name="details">Details</string>
    <string name="action_publish_job">Publish Job</string>
    <string name="job_search">Job Search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_job_management">JobManagementActivity</string>
    <string name="close">Close</string>
</resources>
