<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="Settings"-->
        <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/item_save_job"
        android:orderInCategory="100"
        android:title="Saved Jobs"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_apply_job"
        android:orderInCategory="100"
        android:title="Applied Jobs"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_register"
        android:orderInCategory="100"
        android:title="@string/action_register"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_login"
        android:orderInCategory="100"
        android:title="@string/action_sign_in"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_logout"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
</menu>
