<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tam.joblinks.activities.PublishJobActivity"
    tools:showIn="@layout/activity_publish_job">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edJobTitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/prompt_title"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorYellow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edJobSalary"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/prompt_salary"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorYellow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--<EditText-->
                    <!--android:id="@+id/edJobDescription"-->
                    <!---->
                    <!--android:gravity="top"-->
                    <!--android:layout_gravity="bottom"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="@dimen/dp96"-->
                    <!--android:scrollHorizontally="false"-->
                    <!--android:hint="@string/prompt_job_description"-->
                    <!--android:maxLength="@integer/char500" />-->

                <EditText
                    android:id="@+id/edJobDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/prompt_job_description"
                    android:inputType="textMultiLine"
                    />
                <!--<EditText-->
                    <!--android:id="@+id/edJobDescription"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="@dimen/dp96"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@android:color/transparent"-->
                    <!--android:hint="@string/prompt_job_description"-->
                    <!--android:inputType="textMultiLine" />-->
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorYellow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvJobCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_job_city"
                android:singleLine="true"
                android:textSize="@dimen/dp16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorYellow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="vertical">
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="@color/colorYellow" />-->

        <Button
            android:id="@+id/btPublishJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorYellow"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_dark" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
